--- a/project/values.yaml
+++ b/project/values.yaml
@@ -396,8 +396,9 @@ alertmanager:
     ## Image of Alertmanager
     ##
     image:
-      repository: quay.io/prometheus/alertmanager
-      tag: v0.22.2
+      registry: quay.io
+      repository: prometheus/alertmanager
+      tag: v0.26.0
       sha: ""
 
     ## If true then the user will be responsible to provide a secret with alertmanager configuration
@@ -1368,8 +1369,9 @@ prometheusOperator:
     patch:
       enabled: true
       image:
-        repository: jettech/kube-webhook-certgen
-        tag: v1.5.2
+        registry: registry.k8s.io
+        repository: ingress-nginx/kube-webhook-certgen
+        tag: v20221220-controller-v1.5.1-58-g787ea74b6
         sha: ""
         pullPolicy: IfNotPresent
       resources: {}
@@ -1576,8 +1578,9 @@ prometheusOperator:
   ## Prometheus-operator image
   ##
   image:
-    repository: quay.io/prometheus-operator/prometheus-operator
-    tag: v0.49.0
+    registry: quay.io
+    repository: prometheus-operator/prometheus-operator
+    tag: ""
     sha: ""
     pullPolicy: IfNotPresent
 
@@ -1592,8 +1595,9 @@ prometheusOperator:
   ## Prometheus-config-reloader image to use for config and rule reloading
   ##
   prometheusConfigReloaderImage:
-    repository: quay.io/prometheus-operator/prometheus-config-reloader
-    tag: v0.49.0
+    registry: quay.io
+    repository: prometheus-operator/prometheus-config-reloader
+    tag: ""
     sha: ""
 
   ## Set the prometheus config reloader side-car CPU limit
@@ -1960,8 +1964,9 @@ prometheus:
     ## Image of Prometheus.
     ##
     image:
-      repository: quay.io/prometheus/prometheus
-      tag: v2.28.1
+      registry: quay.io
+      repository: prometheus/prometheus
+      tag: v2.47.2
       sha: ""
 
     ## Tolerations for use with node taints
